--- a/Arduino/hardware/REV10/TODO.txt
+++ b/Arduino/hardware/REV10/TODO.txt
@@ -23,7 +23,7 @@ DONE 20151110: create README.txt with description of board.
 
 DONE 20151110: run rules in DRU+CAM/PMServicesStd.dru
 
-20151110: please confirm xtal layout as per REV2/REV4 to avoid start-up problems as in REV7/REV8.
+DONE 20151110: please confirm xtal layout as per REV2/REV4 to avoid start-up problems as in REV7/REV8.
 
 
 
