--- a/Arduino/hardware/REV11/TODO.txt
+++ b/Arduino/hardware/REV11/TODO.txt
@@ -17,9 +17,7 @@ DONE 20151110: please check CHECKLIST.txt have been met.
 
 DONE 20151110: create README.txt with link to public readable (not public writable) BOM.
 
-Add batteryholder & R1 to BOM
-
-20151110: create README.txt with description of board.
+20151110: create README.txt with description of board. ->>>>>>>> Correct content - its the same as rev10
 
 20151110: run rules in DRU+CAM/PMServicesStd.dru
 
@@ -27,3 +25,4 @@ Add batteryholder & R1 to BOM
 
 20151110: please generate and check in Gerbers in sub-dir as we have done with eg REV2.
 
+20151110:Add batteryholder to BOM
